@@ -258,6 +258,11 @@ signal_signal(PyObject *self, PyObject *args)
     /* Validate that sig_num is one of the allowable signals */
     switch (sig_num) {
         case SIGABRT: break;
+#ifdef SIGBREAK
+        /* Issue #10003: SIGBREAK is not documented as permitted, but works
+           and corresponds to CTRL_BREAK_EVENT. */
+        case SIGBREAK: break;
+#endif
         case SIGFPE: break;
         case SIGILL: break;
         case SIGINT: break;
